# hipcub

./: problem.md  test_benchmark.py
projects/hipcub/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  rmake.py  rtest.py  rtest.xml  toolchain-windows.cmake
projects/hipcub/.github/: CODEOWNERS
projects/hipcub/benchmark/: CMakeLists.txt  benchmark_block_adjacent_difference.cpp  benchmark_block_discontinuity.cpp  benchmark_block_exchange.cpp  benchmark_block_histogram.cpp  benchmark_block_merge_sort.cpp  benchmark_block_radix_rank.cpp  benchmark_block_radix_sort.cpp  benchmark_block_reduce.cpp  benchmark_block_run_length_decode.cpp  benchmark_block_scan.cpp  benchmark_block_shuffle.cpp  benchmark_device_adjacent_difference.cpp  benchmark_device_batch_copy.cpp  benchmark_device_batch_memcpy.cpp  benchmark_device_for.cpp  benchmark_device_histogram.cpp  benchmark_device_memory.cpp  benchmark_device_merge.cpp  benchmark_device_merge_sort.cpp  benchmark_device_partition.cpp  benchmark_device_radix_sort.cpp  benchmark_device_reduce.cpp  benchmark_device_reduce_by_key.cpp  benchmark_device_run_length_encode.cpp  benchmark_device_scan.cpp  benchmark_device_segmented_radix_sort.cpp  benchmark_device_segmented_reduce.cpp  benchmark_device_segmented_sort.cpp  benchmark_device_select.cpp  benchmark_device_spmv.cpp  benchmark_utils.hpp  benchmark_warp_exchange.cpp  benchmark_warp_load.cpp  benchmark_warp_merge_sort.cpp  benchmark_warp_reduce.cpp  benchmark_warp_scan.cpp  benchmark_warp_store.cpp  common_benchmark_header.hpp
projects/hipcub/cmake/: Dependencies.cmake  ROCmCMakeBuildToolsDependency.cmake  Summary.cmake  VerifyCompiler.cmake
projects/hipcub/docs/: conf.py  index.rst  what-is-hipcub.rst
projects/hipcub/docs/api-reference/: data-type-support.rst
projects/hipcub/docs/doxygen/: Doxyfile
projects/hipcub/docs/install/: hipCUB-install-on-Windows.rst  hipCUB-install-overview.rst  hipCUB-install-with-cmake.rst  hipCUB-prerequisites.rst
projects/hipcub/docs/sphinx/: _toc.yml.in  requirements.txt
projects/hipcub/examples/: CMakeLists.txt  example_utils.hpp  mersenne.h
projects/hipcub/examples/block/: example_block_radix_sort.cu  example_block_reduce.cu  example_block_scan.cu
projects/hipcub/examples/device/: example_device_partition_flagged.cpp  example_device_partition_if.cpp  example_device_radix_sort.cpp  example_device_reduce.cpp  example_device_scan.cpp  example_device_select_flagged.cpp  example_device_select_if.cpp  example_device_select_unique.cpp  example_device_sort_find_non_trivial_runs.cpp
projects/hipcub/hipcub/: CMakeLists.txt
projects/hipcub/hipcub/include/hipcub/: config.hpp  hipcub.hpp  hipcub_version.hpp.in  tuple.hpp  util_allocator.hpp  util_device.hpp  util_macro.hpp  util_ptx.hpp  util_temporary_storage.hpp  util_type.hpp
projects/hipcub/hipcub/include/hipcub/agent/: single_pass_scan_operators.hpp
projects/hipcub/hipcub/include/hipcub/backend/cub/: hipcub.hpp  util_allocator.hpp  util_device.hpp  util_macro.hpp  (+1 more)
projects/hipcub/hipcub/include/hipcub/block/: block_adjacent_difference.hpp  block_discontinuity.hpp  block_exchange.hpp  block_histogram.hpp  block_load.hpp  block_merge_sort.hpp  block_radix_rank.hpp  block_radix_sort.hpp  block_raking_layout.hpp  block_reduce.hpp  block_run_length_decode.hpp  block_scan.hpp  block_shuffle.hpp  block_store.hpp  radix_rank_sort_operations.hpp
projects/hipcub/hipcub/include/hipcub/device/: device_adjacent_difference.hpp  device_copy.hpp  device_for.hpp  device_histogram.hpp  device_memcpy.hpp  device_merge.hpp  device_merge_sort.hpp  device_partition.hpp  device_radix_sort.hpp  device_reduce.hpp  device_run_length_encode.hpp  device_scan.hpp  device_segmented_radix_sort.hpp  device_segmented_reduce.hpp  device_segmented_sort.hpp  device_select.hpp  device_spmv.hpp
projects/hipcub/hipcub/include/hipcub/grid/: grid_barrier.hpp  grid_even_share.hpp  grid_mapping.hpp  grid_queue.hpp
projects/hipcub/hipcub/include/hipcub/iterator/: arg_index_input_iterator.hpp  cache_modified_input_iterator.hpp  cache_modified_output_iterator.hpp  constant_input_iterator.hpp  counting_input_iterator.hpp  discard_output_iterator.hpp  tex_obj_input_iterator.hpp  transform_input_iterator.hpp
projects/hipcub/hipcub/include/hipcub/thread/: thread_load.hpp  thread_operators.hpp  thread_reduce.hpp  thread_scan.hpp  thread_search.hpp  thread_sort.hpp  thread_store.hpp
projects/hipcub/hipcub/include/hipcub/warp/: warp_exchange.hpp  warp_load.hpp  warp_merge_sort.hpp  warp_reduce.hpp  warp_scan.hpp  warp_store.hpp
projects/hipcub/test/: CMakeLists.txt
projects/hipcub/test/extra/: CMakeLists.txt  test_hipcub_package.cpp
projects/hipcub/test/hipcub/: CMakeLists.txt  bfloat16.hpp  common_test_header.hpp  half.hpp  single_index_iterator.hpp  test_hipcub_block_adjacent_difference.cpp  test_hipcub_block_discontinuity.cpp  test_hipcub_block_exchange.cpp  test_hipcub_block_histogram.cpp  test_hipcub_block_load_store.cpp  test_hipcub_block_load_store.hpp  test_hipcub_block_load_store.kernels.hpp  test_hipcub_block_merge_sort.cpp  test_hipcub_block_radix_rank.cpp  test_hipcub_block_radix_sort.cpp  test_hipcub_block_reduce.cpp  test_hipcub_block_run_length_decode.cpp  test_hipcub_block_scan.cpp  test_hipcub_block_shuffle.cpp  test_hipcub_caching_device_allocator.cpp  test_hipcub_device_adjacent_difference.cpp  test_hipcub_device_copy.cpp  test_hipcub_device_for.cpp  test_hipcub_device_histogram.cpp  test_hipcub_device_memcpy.cpp  test_hipcub_device_merge.cpp  test_hipcub_device_merge_sort.cpp  test_hipcub_device_partition.cpp  test_hipcub_device_radix_sort.hpp  test_hipcub_device_reduce.cpp  test_hipcub_device_reduce_by_key.cpp  test_hipcub_device_run_length_encode.cpp  test_hipcub_device_scan.cpp  test_hipcub_device_segmented_radix_sort.hpp  test_hipcub_device_segmented_reduce.cpp  test_hipcub_device_segmented_sort.hpp  test_hipcub_device_select.cpp  test_hipcub_device_spmv.cpp  test_hipcub_grid.cpp  test_hipcub_iterators.cpp  (+20 more)
projects/hipcub/test/hipcub/experimental/: sparse_matrix.hpp
(+90 files in other folders)
